--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "static/libs",
+    "public/libs",
     "test",
     "tests"
   ],
